--- a/css/all.css
+++ b/css/all.css
@@ -7029,44 +7029,44 @@ img.text-center {
 .navbar-default .h1, .navbar-default .h2, .navbar-default .h3, .navbar-default .h4, .navbar-default .h5, .navbar-default .h6 {
   line-height: 16px !important; }
 
-.navbar-default .navbar-nav > li > a {
-  position: relative; }
-  .navbar-default .navbar-nav > li > a:after {
-    content: "";
-    width: 100%;
-    height: 4px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: #404042;
-    opacity: .2;
-    -webkit-transform: scaleX(0);
-    -moz-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    -o-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -ms-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center; }
-  .navbar-default .navbar-nav > li > a:hover:after {
+@media (min-width: 768px) {
+  .navbar-default .navbar-nav > li > a {
+    position: relative; }
+    .navbar-default .navbar-nav > li > a:after {
+      content: "";
+      width: 100%;
+      height: 4px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: #404042;
+      opacity: .2;
+      -webkit-transform: scaleX(0);
+      -moz-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+      -o-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition: all 0.2s ease;
+      -moz-transition: all 0.2s ease;
+      transition: all 0.2s ease;
+      -webkit-transform-origin: left center;
+      -moz-transform-origin: left center;
+      -ms-transform-origin: left center;
+      -o-transform-origin: left center;
+      transform-origin: left center; }
+    .navbar-default .navbar-nav > li > a:hover:after {
+      -webkit-transform: scaleX(1);
+      -moz-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+      -o-transform: scaleX(1);
+      transform: scaleX(1);
+      opacity: 1; }
+  .navbar-default .navbar-nav .active a:after {
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
     -ms-transform: scaleX(1);
     -o-transform: scaleX(1);
-    transform: scaleX(1);
-    opacity: 1; }
-
-.navbar-default .navbar-nav .active a:after {
-  -webkit-transform: scaleX(1);
-  -moz-transform: scaleX(1);
-  -ms-transform: scaleX(1);
-  -o-transform: scaleX(1);
-  transform: scaleX(1); }
+    transform: scaleX(1); } }
 
 .panel-theme-accordion {
   padding: 10px 0;
